# syncd

./: Cargo.toml  LICENSE  README.md  programs.cfg
doc/: flow.md
etc/rc.d/: syncd.lua
src/: codec.rs  main.rs
usr/lib/: stem.lua
usr/lib/syncd/backends/: stem.lua
