[package]
name = "syncd"
version = "0.1.0"
edition = "2021"

[dependencies]
notify = "6.1.1"
notify-debouncer-full = "0.3.1"
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3.30"
ciborium = "0.2.2"
bytes = "1.7.2"
twox-hash = "1.6.3"
serde_with = "3.11.0"
serde = "1.0.210"
path-clean = "1.0.1"
